# plugin-architecture-poc

./: .gitignore  README.md  main.py  pyproject.toml
conf/: config.yaml  config_1.yaml
plugins/: base.py  plugin1.py  plugin2.py  plugin3.py
